index.html page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <label>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique laborum natus rem expedita. Sapiente praesentium ipsa labore explicabo minima sunt, ea cum sed necessitatibus possimus maxime, dicta facere veniam quidem voluptatum maiores obcaecati nobis quisquam? Eligendi est maxime aut? Voluptatem qui dignissimos quod iste ipsa consequuntur eum delectus et velit voluptatum molestias nostrum, vero animi magnam, repudiandae est laborum rerum provident. Vitae enim delectus illum officiis provident eius fugit, similique quibusdam eaque id consequatur possimus ex voluptas tenetur porro libero earum qui aspernatur facere non et quis. Quos impedit, dolorem sunt eos possimus quas deleniti atque repellat facere placeat alias.
+    </label>
     
 </body>
 </html>
